--- a/lesson01/assignment/index.html
+++ b/lesson01/assignment/index.html
@@ -19,6 +19,38 @@
       <input type="submit" value="See Demo!">
       <p>The total of my array elements summed with your favorite number is: <span class="output"></span></p>
     </form>
+
+    <form id="example-form2">
+      <label>Enter your favorite number:
+        <input type="text" class="input2">
+      </label>
+      <input type="submit" value="See Demo!">
+      <p>My favorite numbers added with your favorite number: <span class="output2"></span></p>
+    </form>
+
+    <form id="example-form3">
+      <label>Enter your favorite number:
+        <input type="text" class="input3">
+      </label>
+      <input type="submit" value="See Demo!">
+      <p>My favorite numbers that are larger than your favorite number: <span class="output3"></span></p>
+    </form>
+
+    <form id="example-form4">
+      <label>Enter your favorite number:
+        <input type="text" class="input4">
+      </label>
+      <input type="submit" value="See Demo!">
+      <p>Is my favorite number larger then yours? If so here it is: <span class="output4"></span></p>
+    </form>
+
+    <form id="example-form5">
+      <label>Enter your favorite number:
+        <input type="text" class="input5">
+      </label>
+      <input type="submit" value="See Demo!">
+      <p>My favorite numbers multiplied by your favorite number: <span class="output5"></span></p>
+    </form>
   </main>
 </body>
 
